--- a/_sass/rabbits.sass
+++ b/_sass/rabbits.sass
@@ -1,7 +1,7 @@
 
 .rabbit-icon
   max-height: auto
-  max-width: 1.5em
+  max-width: 2em
   display: inline-block
 
 .rabbit-sidebar
